10/8/08 - moved list of rejected features to Unfuddle 795
9/5/08 - remove use of DialogUtils, use JOptionPane directly
> use fancier tabs to switch panels
5/20/08 - add new-style Piccolo tabs
5/20/08 - replace Font with PhetFont throughout
4/28/08 - add PhetLookAndFeel to main
1/7/08 - replace "Lucida Sans" with PhetDefaultFont in HelpBubble
11/9/07 - move about.credits property to localization file
10/9/07 - migrate "Reset All" and "set minimum width" features to phetcommon ControlPanel
10/9/07 - switch persistence to phetcommon's XMLPersistenceManager
9/11/07 - rename FourierModule and FourierControlPanel to have "Abstract" in their names, consistent with other sims
8/27/07 - replace "Lucida Sans" with PhetDefaultFont.getDefaultFontName()
8/16/07 - convert persistence code to use IProguardKeepInterface instead of FourierSerializable
# 3.02.00 (17033)
7/27/07 - new version published as part of new website deployment
7/2/07 - wrap the body of main in invokeLater
6/15/07 - convert description properties to well-formed HTML
4/6/07 - organize imports
4/6/07 - set locale in Spanish JNLP file via javaws.locale property
4/6/07 - encapsulate loading of strings and images in FourierResources
4/6/07 - convert from SimStrings to PhetProjectConfig
3/20/07 - move TrigCache to phetcommon, convert to an instance instead of static methods
3/20/07 - rename packages that contained "enum" keyword, use "enums" instead
3/20/07 - move ColorChooserFactory to phetcommon
3/20/07 - replace ZoomControl et. al. with PhetZoomControl from phetgraphics
3/14/07 - rename SimStrings files to have basename fourier_strings
3/14/07 - move images to data/fourier/images to avoid namespace collisions
3/14/07 - get version and credits from properties file
(2/19/07) - create ProGuard file
(2/19/07) - add FourierSerializable marker interface so that ProGuard doesn't strip out persistence code
(2/19/07) - change "Reset" to "Reset All"