@@ -1,3 +1,4 @@
+10/8/08 - use PhetApplicationConfig.launchSim
 10/8/08 - moved list of rejected features to Unfuddle 795
 9/5/08 - remove use of DialogUtils, use JOptionPane directly
 > use fancier tabs to switch panels
